# BNG3

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  nightly.yml  release.yml  weekly.yml
cpp/: CMakeLists.txt  main.cpp
cpp/actions/: ActionDispatch.cpp
cpp/ast/: Expression.cpp  Expression.hpp  PopulationMappingRule.cpp  PopulationMappingRule.hpp  ReactionRule.cpp
cpp/bindings/: bind_engine.cpp  bind_io.cpp  bind_model.cpp  bind_nfsim.cpp  bind_parser.cpp  module.cpp
cpp/engine/: NFModelAdapter.cpp  OdeIntegrator.cpp  OdeIntegrator.hpp
cpp/nfsim/: NFsim.cpp  NFsim.hh
cpp/nfsim/NFcore/: NFcore.hh  complexList.cpp  energyPattern.cpp  molecule.cpp  moleculeType.cpp  observable.cpp  observable.hh  reactionClass.cpp  system.cpp  templateMolecule.cpp  templateMolecule.hh
cpp/nfsim/NFcore/moleculeLists/: moleculeList.cpp
cpp/nfsim/NFcore/reactionSelector/: logClassSelector.cpp
cpp/nfsim/NFfunction/: NFfunction.hh  funcParser.cpp  localFunction.cpp
cpp/nfsim/NFfunction/muParser/: muParserBase.cpp
cpp/nfsim/NFinput/: NFinput.cpp  NFinput.hh  NFinput_energy.cpp  NFinput_fromModel.cpp  commandLineParser.cpp  parseFuncXML.cpp  rnfRunner.cpp
cpp/nfsim/NFreactions/reactantLists/: reactantList.cpp  reactantTree.cpp  reactantTree.hh
cpp/nfsim/NFreactions/reactions/: DORreaction.cpp  reaction.cpp  reaction.hh
cpp/nfsim/NFreactions/transformations/: transformation.cpp  transformation.hh  transformationSet.cpp  transformationSet.hh
cpp/nfsim/NFscheduler/: Scheduler.cpp
cpp/nfsim/NFutil/: random.cpp
cpp/nfsim/nauty24/: nauty.h
docs/: api_reference.md  architecture.md  cli_reference.md  contributing.md  index.md  migration_guide.md  user_guide.md
legacy/perl/Perl2/: TfunReader.pm
models/actin/: actin_branch.bngl  actin_branch_forFitToData.bngl
models/chemotaxisAdaptation/: AN.bngl  ANx.bngl
models/fceRI_compendium/: fceri_fyn.bngl  fceri_fyn_lig.bngl  fceri_fyn_trimer.bngl  fceri_ji.bngl  fceri_ji_red.bngl  fceri_lyn_745.bngl
models/flagellar_motor/: motor.bngl
models/multisite_phos/: e7.bngl  e8.bngl  e9.bngl
models/oscillatory_system/: oscSystem.bngl
models/performance_test_models/: ANx_noActivity.bngl  poly.bngl  push_pull.bngl  tlbr_performance.bngl
models/tlbr/: tlbr.bngl  tlbr.rnf
python/bionetgen/: __init__.py  _bionetgen_cpp.pyi  cli.py  main.py  model.py  result.py
python/bionetgen/atomizer/: atomizeTool.py
python/bionetgen/compat/: __init__.py  legacy_runner.py
python/bionetgen/core/: defaults.py
python/bionetgen/core/tools/: cli.py
scripts/: validate.py  validate_io_roundtrip.py  validate_nfsim.py  validate_ratelaws.py  validate_sbml.py
tests/python/: test_cpp_backend.py  test_get_version_json.py  test_result.py  test_viz_export.py
tests/python/test/: test_sbml_atom.bngl  test_sbml_flat.bngl
tests/python/viz/: test.bngl
tests/validation/Validate/: nfkb_illustrating_protocols_R.scan  test_data.tfun  test_expression_xml_escaping.bngl  test_expression_xml_escaping_verification.pl  test_tfun_file.bngl  test_tfun_net_full.bngl  test_tfun_ode_simple.bngl  test_tfun_ode_step.bngl  test_tfun_parse.bngl  test_tfun_step_sbml.bngl  test_tfun_xml.bngl  test_time.bngl
