[build-system]
requires = ["scikit-build-core>=0.5", "pybind11>=2.13"]
build-backend = "scikit_build_core.build"

[project]
name = "bionetgen"
version = "3.0.0a1"
description = "Rule-based modeling platform for biochemical reaction systems"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "BioNetGen Development Team"},
]
keywords = ["bionetgen", "systems biology", "rule-based modeling", "stochastic simulation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "numpy>=1.20",
    "click>=8.0",
    "pandas>=1.3",
    "matplotlib>=3.4",
]

[project.optional-dependencies]
full = [
    "seaborn",
    "xmltodict",
    "pyyaml",
    "lxml",
    "networkx",
    "python-libsbml",
    "sympy",
    "libroadrunner",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
bionetgen = "bionetgen.cli:main"

[project.urls]
Homepage = "https://bionetgen.org"
Repository = "https://github.com/RuleWorld/bionetgen"

[tool.scikit-build]
wheel.packages = ["python/bionetgen"]
cmake.args = ["-DBUILD_TESTS=OFF", "-DBUILD_CLI=OFF"]
cmake.build-type = "Release"
install.components = ["python"]

[tool.scikit-build.cmake.define]
BUILD_PYTHON_BINDINGS = "ON"
BUILD_CLI = "OFF"
BUILD_TESTS = "OFF"

[tool.pytest.ini_options]
testpaths = ["tests/python"]
